@@ -8,7 +8,7 @@ indexserver=
 
 [testenv]
 changedir=testing
-commands= py.test -rfsxX --junitxml={envlogdir}/junit-{envname}.xml []
+commands= py.test --lsof -rfsxX --junitxml={envlogdir}/junit-{envname}.xml []
 deps=
     :pypi:pexpect
     :pypi:nose
