@@ -1,6 +1,7 @@
 Changes between 2.1.3 and [next version]
 ----------------------------------------
 
+- fix pytest's own test suite to not leak FDs 
 - fix issue83: link to generated funcarg list
 - fix issue74: pyarg module names are now checked against imp.find_module false positives
 
